--- a/landingpage.html
+++ b/landingpage.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="./Assets/css/landingpage.css">
 </head>
 <body>
     <nav>
+        <di class="navbar">
+        <!-- For Left Logo -->
+        <div class="left">
+            <img src="./Assets/images/SUBH_VIVAH-removebg-preview.png" width="180px" alt="">    
+        </div>
+
+        <!-- For Right Side Anchor Butons Of Navigaton Bar -->
+        <div class="right"> 
+            <ul>
+                <li><a href="">Login    <i class="fas fa-chevron-down"></i></a></li>
+                <li><a href="">Help    <i class="fas fa-chevron-down"></i></a></li>
+                <li><a href="">Choose Lanuage   <i class="fas fa-comments"></i></a></li>
+            </ul>
+        </div>
+    </di>
+    <h1>The Worlds No.1 Mathing Servise</h1>
+    <h2>Search by City, Profession & Community</h2>
 
     </nav>
+
 </body>
 </html>
