--- a/landingpage.html
+++ b/landingpage.html
@@ -25,8 +25,11 @@
             </ul>
         </div>
     </di>
-    <h1>The Worlds No.1 Mathing Servise</h1>
-    <h2>Search by City, Profession & Community</h2>
+    <div class="slogan">
+        <h1>The Worlds No.1 Matchmaking Servise</h1>
+        <h3>Search by City, Profession & Community</h3>
+    </div>
+  
 
     </nav>
 
