--- a/landingpage.html
+++ b/landingpage.html
@@ -21,17 +21,53 @@
             <ul>
                 <li><a href="">Login    <i class="fas fa-chevron-down"></i></a></li>
                 <li><a href="">Help    <i class="fas fa-chevron-down"></i></a></li>
-                <li><a href="">Choose Lanuage   <i class="fas fa-comments"></i></a></li>
+                <li><a href="">About Us</a></li>
+                
+                <li id="choose_lang" ><a href="">Choose Lanuage   <i class="fas fa-comments"></i>
+                    <ul id="lang">
+                        <li><a href="">English</a></li>
+                        <li><a href="">Hindi</a></li>
+                        <li><a href="">Marathi</a></li>
+                    </ul>
+                </a></li>
+            <li id="theme"><a href=""><img width="30px" src="https://static-00.iconduck.com/assets.00/dark-theme-icon-2048x2048-ymrfkxsy.png" alt=""></a></li>
             </ul>
         </div>
     </di>
     <div class="slogan">
-        <h1>The Worlds No.1 Matchmaking Servise</h1>
+        <h1>The Worlds No.1 Matchmaking Servise</h1><br>
         <h3>Search by City, Profession & Community</h3>
+        <!-- <div class="input_container">
+            <label for="options">I,m looking for a</label><br>
+        <select id="options" name="options">
+            <option value="option1">Woman</option>
+            <option value="option2">Man</option>
+        </select>
+        <div class="input_container">
+            <label for="options">I,m looking for a</label><br>
+        <select id="options" name="options">
+            <option value="option1">Woman</option>
+            <option value="option2">Man</option>
+        </select> -->
+        </div>
     </div>
-  
+    
+    <div class="input_container">
+        <div class="childs">
+        <label for="options">I,m looking for a</label><br>
+    <select id="options" name="options">
+        <option value="option1">Woman</option>
+        <option value="option2">Man</option>
+    </select><br>
+    <label for="options">I,m looking for a</label><br>
+    <select id="options" name="options">
+        <option value="option1">Woman</option>
+        <option value="option2">Man</option>
+    </select>
+</div>
+    </div>
 
     </nav>
-
+  <script src="./Assets/script.js"></script>
 </body>
 </html>
